@@ -22,6 +22,7 @@ Version 1.1.8 work in progress
 - Bug #2422: Fixed the bug that calling CLogger::flush(true) multiple times may cause duplication of dumped messages (Qiang)
 - Bug #2475: Fixed the bug that CMssqlCommandBuilder and COciCommandBuilder don't respect parameters declared in CDbExpression when doing insertion and updating (Qiang)
 - Bug #2485: Fixed the bug that CMssqlPdoAdapter is not used when the driver is sqlsrv (Qiang)
+- Bug #2509: Fixed the bug that AR for MSSQL may fail if on different catalogues (Qiang)
 - Bug #2516: CTimestamp::getDate() produced wrong output with the default timestamp (Y!!)
 - Bug: CMapIterator current key wasn't initialized properly (Sam Dark, Detonator)
 - Bug: Controller generated with Gii CRUD wasn't able to handle non-integer primary key (Sam Dark)
